--- a/jquery-float-tips-plugin/css/jquery.tips.css
+++ b/jquery-float-tips-plugin/css/jquery.tips.css
@@ -5,6 +5,6 @@
 .jq-tips-wrapper .jq-tips-header span{display:block;width:10px;height:10px;float:left;font-size:0;cursor:pointer;}
 .jq-tips-wrapper .jq-tips-header span.jq-tips-mini{margin:12px 0 0 0;}
 .jq-tips-wrapper .jq-tips-header span.jq-tips-close{margin:12px 0 0 9px;}
-.jq-tips-wrapper .jq-tips-content{clear: both;width:100%;min-height: 130px;background: url(../images/content_bg.png) repeat-y left top;}
+.jq-tips-wrapper .jq-tips-content{clear: both;width:100%;height: 130px;background: url(../images/content_bg.png) repeat-y left top;}
 .jq-tips-wrapper .jq-tips-content .jq-tips-content-inner{padding:10px;font-size:12px;color:#000;}
 .jq-tips-wrapper .jq-tips-content-bottom{clear:both;width:100%;height:7px;background: url(../images/bg.png) no-repeat left bottom;}
